--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "deepdash-es": "^5.3.2",
     "express": "^4.15.2",
     "firebase": "^8.0.2",
+    "firebase-admin": "^9.4.1",
+    "firebase-functions": "^3.11.0",
+    "gravatar-url": "^3.1.0",
     "ng-inline-svg": "^11.0.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "^9.1.0",
@@ -119,15 +122,16 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "electron": "^10.1.5",
     "eslint": "^7.6.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
