--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "types": ["jest","node"],
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "strict": true,
@@ -18,21 +19,51 @@
       "dom"
     ],
     "paths": {
-      "@shared/*": ["./src/app/shared/*", ],
-      "@application/*": ["./src/app/modules/settings//*", ],
-      "@article/*": ["./src/app/modules/article/*", ],
-      "@category/*": ["./src/app/modules/category/*", ],
-      "@club/*": ["./src/app/modules/club/*", ],
-      "@location/*": ["./src/app/modules/location/*", ],
-      "@match/*": ["./src/app/modules/match/*", ],
-      "@member/*": ["./src/app/modules/member/*", ],
-      "@permission/*": ["./src/app/modules/permission/*", ],
-      "@player/*": ["./src/app/modules/player/*", ],
-      "@role/*": ["./src/app/modules/role/*", ],
-      "@senior/*": ["./src/app/modules/senior/*", ],
-      "@sponsor/*": ["./src/app/modules/sponsor/*", ],
-      "@team/*": ["./src/app/modules/team/*", ],
-      "@user/*": ["./src/app/modules/user/*", ],
+      "@shared/*": [
+        "./src/app/shared/*",
+      ],
+      "@application/*": [
+        "./src/app/modules/settings//*",
+      ],
+      "@article/*": [
+        "./src/app/modules/article/*",
+      ],
+      "@category/*": [
+        "./src/app/modules/category/*",
+      ],
+      "@club/*": [
+        "./src/app/modules/club/*",
+      ],
+      "@location/*": [
+        "./src/app/modules/location/*",
+      ],
+      "@match/*": [
+        "./src/app/modules/match/*",
+      ],
+      "@member/*": [
+        "./src/app/modules/member/*",
+      ],
+      "@permission/*": [
+        "./src/app/modules/permission/*",
+      ],
+      "@player/*": [
+        "./src/app/modules/player/*",
+      ],
+      "@role/*": [
+        "./src/app/modules/role/*",
+      ],
+      "@senior/*": [
+        "./src/app/modules/senior/*",
+      ],
+      "@sponsor/*": [
+        "./src/app/modules/sponsor/*",
+      ],
+      "@team/*": [
+        "./src/app/modules/team/*",
+      ],
+      "@user/*": [
+        "./src/app/modules/user/*",
+      ],
     },
     "typeRoots": [
       "./*/*.d.ts"
