--- a/projects/sfw-frontend/e2e/tsconfig.json
+++ b/projects/sfw-frontend/e2e/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "../../../out-tsc/e2e",
     "module": "commonjs",
     "target": "es2018",
-    "types": [
+    "types": ["jest",
       "jasmine",
       "node"
     ]
