--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:watch": "jest --watchAll"
   },
   "engines": {
@@ -39,7 +39,6 @@
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.1",
     "firebase-functions": "^3.6.1",
-    "firebase-functions-test": "^0.2.3",
     "fs": "0.0.1-security",
     "gm": "^1.23.1",
     "google-auth-library": "^6.1.3",
@@ -83,10 +82,12 @@
     "eslint": "^7.13.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.0",
+    "firebase-functions-test": "^0.2.3",
     "jest": "^26.6.3",
+    "karma-jasmine": "^4.0.1",
     "ts-jest": "^26.4.4",
     "tslint": "^6.0.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.9.7"
   },
   "private": true
 }
