--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/platform-server": "~11.0.2",
     "@angular/router": "~11.0.2",
     "@angular/service-worker": "^11.0.2",
+    "@firebase/testing": "^0.20.11",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fullcalendar/angular": "^5.4.0",
     "@fullcalendar/core": "^5.4.0",
@@ -129,11 +130,13 @@
     "eslint": "^7.6.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^5.1.1",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "^9.0.0",
